Tue Oct 29 06:00:44 UTC 2013  James H. Hill  <hillj@cs.iupui.edu>

        * config/pin.mpb:
        
          Fixed compilation errors on MacOS X.

Fri Oct 25 18:42:59 UTC 2013  James H. Hill  <hillj at cs dot iupui dot edu>

        * config/pin.mpb:

          Moved verbatim code from 'top' to 'macros' section.

Thu Oct  3 13:13:33 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/ndds_ts_defaults.mpb:
          Don't use quote for dependent, causes Visual Studio not
          be able to compile files with rtiddsgen

Fri Sep 27 20:48:52 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * config/boost_chrono.mpb:

          Adding a new mpb for a new Boost library.

Sat Sep  7 15:15:55 UTC 2013  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ConfigParser.pm:

          Remove leading and trailing spaces from lines read from a file to
          avoid adding them to paths and other values.

        * modules/WorkspaceCreator.pm:

          Replace '.' with '__' in project names used within Graphviz files.
          Names with periods in them are not accepted.

        * templates/make.net.mpd:

          Use libs, lit_libs, and pure_libs as is done within the vc8 C#
          template.

        * templates/vc8csharp.mpd:

          If a config file group has the 'generates_source' setting, we will
          add a .Designer.cs file to the compile list.

Sat Sep  7 03:49:06 UTC 2013  James H. Hill  <hillj at cs dot iupui dot edu>

        * config/pin.mpb:
        * config/pintool.mpb:

          Fixed compilation and runtime errors on MacOS X.

Fri Sep  6 20:51:59 UTC 2013  James H. Hill  <hillj at cs dot iupui dot edu>

        * config/pin.mpb:
        * config/pintool.mpb:

          Separated the definitions for linking against Pin without creating
          a Pintool, and for creating a Pintool.

Sat Aug 24 18:40:18 UTC 2013  James H. Hill  <hillj at cs dot iupui dot edu>

        * config/udm.mpb:
