@@ -1,7 +1,12 @@
+Tue Oct 29 10:31:02 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * docs/html/MakeProjectCreator.html:
+          Added vc11/vc12
+
 Tue Oct 29 06:00:44 UTC 2013  James H. Hill  <hillj@cs.iupui.edu>
 
         * config/pin.mpb:
-        
+
           Fixed compilation errors on MacOS X.
 
 Fri Oct 25 18:42:59 UTC 2013  James H. Hill  <hillj at cs dot iupui dot edu>
